<resources>
    <string name="app_name">GoogleSignIn2</string>
    <string name="log_out">Log Out</string>
    <string name="database">Database</string>
    <string name="firebase">Firebase</string>
    <string name="email_auth">Email Auth</string>
    <string name="fcm">FCM</string>
    <string name="design_components">Design Components</string>
    <string name="bottom_nav">Bottom Nav</string>
    <string name="tablayout">TabLayout</string>
    <string name="sign_out">Sign Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="age">Age</string>
    <string name="submit">Submit</string>
    <string name="username">UserName</string>
    <string name="user_age">User Age</string>
    <string name="firebase_storage">Firebase Storage</string>
    <string name="user_habits">User Habits</string>
    <string name="habit">Habit</string>
    <string name="_10">10</string>
    <string name="all_user_description">All User Description</string>
    <string name="todo">TODO</string>
    <string name="habit_name">Habit Name</string>
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="firebase_functions">Firebase Functions</string>
    <string name="view">View</string>
    <string name="upload">Upload</string>
    <string name="choose">Choose</string>
    <string name="view_data">View Data</string>


</resources>