<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/userHabitName_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/habit_name"
        android:importantForAutofill="no"
        android:inputType="text" />


    <EditText
        android:id="@+id/userHabitDesc_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text" />


    <EditText
        android:id="@+id/userHabitPrior_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/priority"
        android:importantForAutofill="no"
        android:inputType="number" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelBtnHabit"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/addBtnHabit"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/add"
            android:layout_toEndOf="@+id/cancelBtnHabit"
            android:layout_toRightOf="@+id/cancelBtnHabit" />

    </RelativeLayout>

</LinearLayout>