<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="FirebaseDatabase.FireDatabase">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName_txt"
        android:text="@string/username"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userAge_txt"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/userName_txt"
        android:text="@string/user_age"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userAge_txt"
        android:id="@+id/userHabitsBtn"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/user_habits"
        />


</RelativeLayout>