<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="firestorage.UploadStorage">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLay3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/black">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar_StorageAct"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="User Storage"
            tools:targetApi="lollipop" />
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/chooseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/choose"
        android:textAllCaps="false" />

    <ImageView
        android:id="@+id/storageImgView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <VideoView
                android:id="@+id/storageVidView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal|center"
                android:contentDescription="@string/todo"
                android:visibility="gone" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/viewData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/view_data"
        android:textAllCaps="false"
        />




</LinearLayout>